feat(es): combine secrets

--- a/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name bazarr-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -16,27 +13,7 @@ spec:
         # App
         BAZARR__API_KEY: '{{ .BAZARR_API_KEY }}'
         PLEX_TOKEN: "{{ .PLEX_API_KEY }}"
-  dataFrom:
-  - extract:
-      key: bazarr
-  - extract:
-      key: plex
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name bazarr-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         POSTGRES_ENABLED: "true"
         POSTGRES_DATABASE: '{{ .dbname }}'
         POSTGRES_HOST: '{{ index . "pgbouncer-host" }}'
@@ -44,4 +21,17 @@ spec:
         POSTGRES_PASSWORD: '{{ .password }}'
   dataFrom:
   - extract:
+      key: bazarr
+    sourceRef: &onepass
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
+      key: plex
+    sourceRef: *onepass
+  - extract:
       key: postgres-pguser-bazarr
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
