--- a/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name dashbrr-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -25,37 +22,7 @@ spec:
         OIDC_CLIENT_ID: "{{ .DASHBRR_CLIENT_ID }}"
         OIDC_CLIENT_SECRET: "{{ .DASHBRR_CLIENT_SECRET }}"
         OIDC_REDIRECT_URL: "https://dashbrr.${SECRET_DOMAIN}/api/auth/callback"
-  dataFrom:
-  - extract:
-      key: radarr
-  - extract:
-      key: sonarr
-  - extract:
-      key: prowlarr
-  - extract:
-      key: overseerr
-  - extract:
-      key: maintainerr
-  - extract:
-      key: plex
-  - extract:
-      key: dashbrr
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name dashbrr-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         DASHBRR__DB_TYPE: postgres
         DASHBRR__DB_NAME: '{{ .dbname }}'
         DASHBRR__DB_HOST: '{{ index . "pgbouncer-host" }}'
@@ -64,4 +31,32 @@ spec:
         DASHBRR__DB_PASSWORD: '{{ .password }}'
   dataFrom:
   - extract:
+      key: radarr
+    sourceRef: &onepass
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
+      key: sonarr
+    sourceRef: *onepass
+  - extract:
+      key: prowlarr
+    sourceRef: *onepass
+  - extract:
+      key: overseerr
+    sourceRef: *onepass
+  - extract:
+      key: maintainerr
+    sourceRef: *onepass
+  - extract:
+      key: plex
+    sourceRef: *onepass
+  - extract:
+      key: dashbrr
+    sourceRef: *onepass
+  - extract:
       key: postgres-pguser-dashbrr
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
