--- a/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name kyoo-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -19,7 +16,7 @@ spec:
         #Meili
         MEILI_HOST: http://kyoo-meilisearch:7700
         MEILI_MASTER_KEY: '{{ .MEILI_MASTER_KEY }}'
-        #RabbitMQ
+        # RabbitMQ
         RABBITMQ_DEFAULT_USER: kyoo
         RABBITMQ_PORT: "5672"
         RABBITMQ_HOST: kyoo-rabbitmq
@@ -33,27 +30,7 @@ spec:
         OIDC_AUTHENTIK_SCOPE: openid email profile
         OIDC_AUTHENTIK_CLIENTID: '{{ .KYOO_CLIENT_ID }}'
         OIDC_AUTHENTIK_SECRET: '{{ .KYOO_CLIENT_SECRET }}'
-  dataFrom:
-  - extract:
-      key: kyoo
-  - extract:
-      key: kometa
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name kyoo-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         POSTGRES_DB: '{{ .dbname }}'
         POSTGRES_SERVER: '{{ .host }}'
         POSTGRES_PORT: '{{ .port }}'
@@ -61,4 +38,17 @@ spec:
         POSTGRES_PASSWORD: '{{ .password }}'
   dataFrom:
   - extract:
+      key: kyoo
+    sourceRef: &onepass
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
+      key: kometa
+    sourceRef: *onepass
+  - extract:
       key: postgres-pguser-kyoo
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
