--- a/kubernetes/main/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name grafana-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -19,25 +16,7 @@ spec:
         # Admin User
         adminUser: "{{ .GRAFANA_ADMIN_USER }}"
         adminPass: "{{ .GRAFANA_ADMIN_PASS }}"
-  dataFrom:
-  - extract:
-      key: grafana
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name grafana-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         GF_DATABASE_USER: '{{ .user }}'
         GF_DATABASE_PASSWORD: '{{ .password }}'
         GF_DATABASE_HOST: '{{ index . "pgbouncer-host" }}'
@@ -46,4 +25,14 @@ spec:
         GF_DATABASE_TYPE: postgres
   dataFrom:
   - extract:
+      key: grafana
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
       key: postgres-pguser-grafana
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
