--- a/kubernetes/main/apps/downloads/radarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/radarr/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name radarr-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -15,25 +12,7 @@ spec:
       data:
         # App
         RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
-  dataFrom:
-  - extract:
-      key: radarr
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name radarr-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         RADARR__POSTGRES__HOST: '{{ index . "pgbouncer-host" }}'
         RADARR__POSTGRES__PORT: '{{ index . "pgbouncer-port" }}'
         RADARR__POSTGRES__USER: '{{ .user }}'
@@ -41,4 +20,14 @@ spec:
         RADARR__POSTGRES__MAINDB: '{{ .dbname }}'
   dataFrom:
   - extract:
+      key: radarr
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
       key: postgres-pguser-radarr
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
