--- a/kubernetes/main/apps/downloads/readarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/readarr/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name readarr-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -15,25 +12,7 @@ spec:
       data:
         # App
         READARR__API_KEY: "{{ .READARR_API_KEY }}"
-  dataFrom:
-  - extract:
-      key: readarr
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name readarr-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         READARR__POSTGRES__HOST: '{{ index . "pgbouncer-host" }}'
         READARR__POSTGRES__PORT: '{{ index . "pgbouncer-port" }}'
         READARR__POSTGRES__USER: '{{ .user }}'
@@ -43,4 +22,14 @@ spec:
         READARR__POSTGRES__CACHEDB: readarr_cache
   dataFrom:
   - extract:
+      key: readarr
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
       key: postgres-pguser-readarr
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
