--- a/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name gatus-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -16,26 +13,18 @@ spec:
         # App
         DISCORD_WEBHOOK_URL: "{{ .DISCORD_WEBHOOK_URL }}"
         SECRET_DOMAIN: ${SECRET_DOMAIN}
-  dataFrom:
-  - extract:
-      key: discord
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name gatus-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         POSTGRES_URI: '{{ index . "pgbouncer-uri" }}'
   dataFrom:
   - extract:
+      key: discord
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
       key: postgres-pguser-gatus
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
