--- a/kubernetes/main/apps/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/main/apps/security/authentik/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name authentik-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -19,25 +16,7 @@ spec:
         AUTHENTIK_BOOTSTRAP_TOKEN: '{{ .AUTHENTIK_TOKEN }}'
         AUTHENTIK_SECRET_KEY: '{{ .AUTHENTIK_SECRET_KEY }}'
         AUTHENTIK_REDIS__DB: "1"
-  dataFrom:
-  - extract:
-      key: authentik
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name authentik-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         AUTHENTIK_POSTGRESQL__NAME: '{{ .dbname }}'
         AUTHENTIK_POSTGRESQL__HOST: '{{ .host }}' #pgBouncer is set to session for Grafana, and Authentik requires transaction
         AUTHENTIK_POSTGRESQL__USER: '{{ .user }}'
@@ -46,4 +25,14 @@ spec:
         AUTHENTIK_POSTGRESQL__SSLMODE: 'require'
   dataFrom:
   - extract:
+      key: authentik
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
       key: postgres-pguser-authentik
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
