--- a/kubernetes/main/apps/security/authentik/app/helmrelease.yaml
+++ b/kubernetes/main/apps/security/authentik/app/helmrelease.yaml
@@ -25,14 +25,12 @@ spec:
   values:
     global:
       podAnnotations:
-        secret.reloader.stakater.com/reload: authentik-secret, authentik-db-secret
+        secret.reloader.stakater.com/reload: authentik-secret
       deploymentStrategy:
         type: RollingUpdate
       envFrom:
         - secretRef:
             name: authentik-secret
-        - secretRef:
-            name: authentik-db-secret
     authentik:
       redis:
         host: dragonfly.database.svc.cluster.local
