--- a/kubernetes/main/apps/self-hosted/lubelog/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/app/externalsecret.yaml
@@ -5,14 +5,12 @@ kind: ExternalSecret
 metadata:
   name: &name lubelog-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
       engineVersion: v2
       data:
+        # OIDC
         OpenIDConfig__Name: authentik
         OpenIDConfig__ClientId: "{{ .LUBELOG_CLIENT_ID }}"
         OpenIDConfig__ClientSecret: "{{ .LUBELOG_CLIENT_SECRET }}"
@@ -20,26 +18,18 @@ spec:
         OpenIDConfig__TokenURL: https://sso.${SECRET_DOMAIN}/application/o/token/
         OpenIDConfig__RedirectURL: https://lubelog.${SECRET_DOMAIN}/Login/RemoteAuth
         OpenIDConfig__Scope: email
-  dataFrom:
-  - extract:
-      key: lubelog
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name lubelog-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         POSTGRES_CONNECTION: 'Host={{ index . "pgbouncer-host" }}:{{ .port }};Username={{ .user }};Password={{ .password }};Database={{ .dbname }}'
   dataFrom:
   - extract:
+      key: lubelog
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
       key: postgres-pguser-lubelog
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-pgo-secrets
