--- a/kubernetes/main/flux/repos/kustomization.yaml
+++ b/kubernetes/main/flux/repos/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./actions-runner-controller.yaml
   - ./authentik-charts.yaml
   - ./crunchydata.yaml
+  - ./csi-driver-nfs.yaml
   - ./dragonfly.yaml
   - ./itzg.yaml
   - ./rook-ceph.yaml
