feat: update nfs mounts

--- a/kubernetes/main/flux/settings/cluster-secrets.sops.yaml
+++ b/kubernetes/main/flux/settings/cluster-secrets.sops.yaml
@@ -16,10 +16,10 @@ stringData:
     SVC_MINECRAFT_ADDR: ENC[AES256_GCM,data:f12BWnkvCdvjNg==,iv:gHfGEfHHQY9Rbu0uDls0sLdkje7UIQ4Mp+l5n33BJBA=,tag:NUo6kfMNYZQY9gRqZZN36g==,type:str]
     SVC_COREKEEPER_ADDR: ENC[AES256_GCM,data:fA4djsP75bTYlA==,iv:Kipkmlx+4AEkjmSjCdLKxSRRViAp0AP8SYgcyQImC0s=,tag:o7yurCyzgSHSnGmCHqZmAg==,type:str]
     #ENC[AES256_GCM,data:NYqIEJwguAGYzknS,iv:U0oZbqHMObZ+Wvx8ryQE8dlR0SG26wsfYV3F2F67H+w=,tag:oCJYngN4jrdWrQug82W9vQ==,type:comment]
-    SECRET_NFS_DATA: ENC[AES256_GCM,data:JLcg52dMoePDlyQnA8ZeSccLVQ==,iv:IQFJv4fu/5ToHSIN5HsC+wr7WmTXvh5QVURwnNYiA4Q=,tag:U7ougHg+u5kQrmgvj3z1UQ==,type:str]
-    SECRET_NFS_PAPERLESS: ENC[AES256_GCM,data:zAriBZQWfFLHarrMJFNAn1zIFJ4=,iv:W//f4b//UhzehpJv/9ByNj1O8x9WIiDud9tKJgRoG9Q=,tag:v8DQCTXJEl/lIQrW820yjw==,type:str]
-    SECRET_NFS_VOLSYNC: ENC[AES256_GCM,data:pteLibsq8PVS4IaI7x9dnY+H+ZE5lUN5kazotYn+wLHW,iv:gZDW0a0E3uWEPg2b/24LpMUh/aiA+A3g1qh68wiurzM=,tag:HGwnKVDu341u4uTcieVnxg==,type:str]
-    SECRET_NFS_POSTGRES: ENC[AES256_GCM,data:TvsVDnGvsXp//W0Ed9hYzMiIOiUubattV3CX2YHxC7Xu/A==,iv:QjsvEqZC7yQ31kt3ttDZysxsYqKQDhJDcMOAOTMI4+c=,tag:5w4Rc8gR8KjP+T1Qo5hQhw==,type:str]
+    SECRET_NFS_DATA: ENC[AES256_GCM,data:85DKixrSI8rproq1PmI=,iv:kvg70gJHchxhVQsjGInXA8V1bx1XzWjmICMhfquYZTg=,tag:f3dPXLWTKx7ApYucQtIe1w==,type:str]
+    SECRET_NFS_PAPERLESS: ENC[AES256_GCM,data:U5zrsgH3/TED4QVZSzP2,iv:E1RB4QWwMpLYSGRJLOtC89Uat/7K3Hf/4m8feU2dcGw=,tag:TrZbkBC+3I7OUIb2VWGuWw==,type:str]
+    SECRET_NFS_VOLSYNC: ENC[AES256_GCM,data:3NVs6XONZxR3Ze+uVX3gkmjpJIIlxU6Cd/kC0A==,iv:9SW3VVHHJKwloc4VrudeqZNmTiJMnQ4ozCiypt/bk4M=,tag:dUuQR8cAmKIgsVK0ywMEYA==,type:str]
+    SECRET_NFS_POSTGRES: ENC[AES256_GCM,data:wsXmVzJZuz+YmB0RiEmNCBL3+eHC6sf/vWKYWUM=,iv:axtTCqsexrbVEemk2Xg29mWsB7I4rPzoErmfLx7YgVM=,tag:JL03bowQOFJnqrKzvB/MFQ==,type:str]
     LATITUDE: ENC[AES256_GCM,data:+SFXV7JnoT1xX/1auwG7RA==,iv:Ojw+S3gtVIHN15uAveGVUsHFFfQogmx2uC0YcxNx+kM=,tag:l7m+O3NCMoqJCMVUgNz2Bw==,type:str]
     LONGITUDE: ENC[AES256_GCM,data:5JWin8qaaJh32nnHANsRsvs=,iv:jsepB8x8q/R97Be5ZxXpHGqUFuUaEv9r36CT4MaZSZs=,tag:/TeYa7lzjrksVuKLZw3mCA==,type:str]
 sops:
@@ -37,8 +37,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-19T16:25:56Z"
-    mac: ENC[AES256_GCM,data:LZWRgX3VIdm0C5UbI3AB1OTnsdyck+sg2rx6JB+RgOXPfRuC8SoSACzsfMUOVYKcMFlGgV8H72LdY4cPiDRRyG1/ISeJTTz0Kc6slzwGhqywJsHjvYedb0J7uvJMp1r7uoCZi+iA33qr9JPip9GsyJQFVaXKWYe+EZwxfTF3Ynk=,iv:cmvO3ozgejXBAHIOZYY/YTLQ5Ahan3calaEUAJ3mHpY=,tag:RytfLIYauU7B/FO1mSPtcQ==,type:str]
+    lastmodified: "2024-12-05T04:42:19Z"
+    mac: ENC[AES256_GCM,data:q0aKP8FFTfgZEvQMcqOA3ZQfpwPVZxsK+KOFdL/n9he8L9R775DShLmZItWiZzrPN1tlBSkwxFZej2vEpVqIVZyz/CXX5wB0qxJ/pDbZaN4cPBgwF3327Jnxgn9MsLHqbo8KKuK2kkBpiQfuFFKi6a0twAcgzZYrM2L0HOUWfug=,iv:fOxqm/EToM8t0EY0tSvURZojt5RAK3CT5sApMXQrZAY=,tag:hkG/Oiqw0W8ib6M1lO/v+g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
