--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./ersatztv/ks.yaml
   - ./kavita/ks.yaml
   - ./komga/ks.yaml
-  - ./kyoo/ks.yaml
+  # - ./kyoo/ks.yaml
   - ./maintainerr/ks.yaml
   - ./overseerr/ks.yaml
   - ./plex/ks.yaml
