--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -218,7 +218,7 @@ patches:
         net.ipv4.tcp_tw_reuse: 1
         net.ipv4.tcp_window_scaling: 1
 
-  # Custom sysfs settings
+  # Custom sysfs settings # 5/6 nodes are 6c/12t and constantly throwing DMESG errors
   - |-
     machine:
       sysfs:
@@ -234,10 +234,6 @@ patches:
         devices.system.cpu.cpu9.cpufreq.energy_performance_preference: balance_power
         devices.system.cpu.cpu10.cpufreq.energy_performance_preference: balance_power
         devices.system.cpu.cpu11.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu12.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu13.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu14.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu15.cpufreq.energy_performance_preference: balance_power
 
   # Mount openebs-hostpath in kubelet
   - |-
