--- a/kubernetes/utility/apps/storage/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   # Flux-Kustomizations
   - ./longhorn/ks.yaml
   - ./openebs/ks.yaml
-  # - ./snapshot-controller/ks.yaml
+  - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
