--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -160,6 +160,16 @@ patches:
   #       extraKernelArgs:
   #         - net.ifnames=0
 
+  # # Performance hacks
+  - |-
+    machine:
+      install:
+        extraKernelArgs:
+          - apparmor=0
+          - init_on_alloc=0
+          - init_on_free=0
+          - mitigations=off
+          - security=none
 
 controlPlane:
   nodeLabels:
