--- a/kubernetes/main/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -23,6 +23,7 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    replicas: 2
     args:
       - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
       - --kubelet-use-node-status-port
