fix: update server

--- a/kubernetes/main/apps/observability/network-ups-tools/app/servicemonitor.yaml
+++ b/kubernetes/main/apps/observability/network-ups-tools/app/servicemonitor.yaml
@@ -28,7 +28,7 @@ spec:
           regex: (pod)
       params:
         server:
-          - network-ups-tools.observability
+          - network-ups-tools.observability.svc.cluster.local
       path: /ups_metrics
       port: metrics
       scheme: http
