--- a/kubernetes/main/apps/storage/snapshot-controller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/storage/snapshot-controller/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: snapshot-controller
-      version: 4.0.0
+      version: 3.0.6
       sourceRef:
         kind: HelmRepository
         name: piraeus
@@ -25,3 +25,10 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  values:
+    controller:
+      replicaCount: 2
+      serviceMonitor:
+        create: true
+    webhook:
+      enabled: false
