--- a/kubernetes/main/apps/storage/volsync/app/helmrelease.yaml
+++ b/kubernetes/main/apps/storage/volsync/app/helmrelease.yaml
@@ -27,5 +27,11 @@ spec:
       namespace: storage
   values:
     manageCRDs: true
+    replicaCount: 2
     metrics:
       disableAuth: true
+    podSecurityContext:
+      runAsNonRoot: true
+      runAsUser: 65534
+      runAsGroup: 65534
+      seccompProfile: { type: RuntimeDefault }
