--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -5,8 +5,8 @@ kind: HelmRelease
 metadata:
   name: rook-ceph-cluster
 spec:
-  driftDetection:
-    mode: enabled
+  # driftDetection:
+  #   mode: enabled
   interval: 30m
   timeout: 15m
   chart:
