chore(kapowarr): cleanup resources

--- a/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
@@ -42,9 +42,9 @@ spec:
             resources:
               requests:
                 cpu: 15m
-                memory: 350M
+                memory: 100M
               limits:
-                memory: 600M
+                memory: 1G
     service:
       app:
         controller: *app
