--- a/kubernetes/utility/apps/external-secrets/external-secrets/ks.yaml
+++ b/kubernetes/utility/apps/external-secrets/external-secrets/ks.yaml
@@ -32,6 +32,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets
+    - name: onepassword-connect
   path: ./kubernetes/utility/apps/external-secrets/external-secrets/stores
   prune: true
   sourceRef:
