Revert "feat(ingress-nginx): remove need for individual ingress annotations"
This reverts commit a48179794b5acfc4ffbdddb22d89d8c93d7f95f9.

--- a/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
@@ -63,4 +63,5 @@ spec:
             gethomepage.dev/name: Hubble
             gethomepage.dev/group: Observability
             gethomepage.dev/description: Network Monitoring Dashboard
+            external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
           hosts: ["hubble.${SECRET_DOMAIN}"]
