--- a/kubernetes/main/apps/media/plex/movie-roulette/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/movie-roulette/helmrelease.yaml
@@ -69,6 +69,8 @@ spec:
     ingress:
       app:
         className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
           - host: movie-roulette.${SECRET_DOMAIN}
             paths:
