--- a/kubernetes/main/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
@@ -41,6 +41,8 @@ spec:
     ingress:
       enabled: true
       className: internal
+      annotations:
+        external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
       hosts:
         - host: blackbox.${SECRET_DOMAIN}
           paths:
