--- a/kubernetes/main/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/helmrelease.yaml
@@ -123,6 +123,7 @@ spec:
           gethomepage.dev/description: Status Page
           gethomepage.dev/widget.type: gatus
           gethomepage.dev/widget.url: http://gatus.observability
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
           - host: status.${SECRET_DOMAIN}
             paths:
