--- a/kubernetes/utility/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helmrelease.yaml
@@ -57,4 +57,6 @@ spec:
         ingress:
           enabled: true
           className: internal
+          annotations:
+            external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
           hosts: ["hubble-utility.${SECRET_DOMAIN}"]
