--- a/kubernetes/utility/apps/network/cloudflare-ddns/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/cloudflare-ddns/app/helmrelease.yaml
@@ -86,6 +86,8 @@ spec:
     ingress:
       app:
         className: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         hosts:
           - host: "ddns.${SECRET_DOMAIN}"
             paths:
