--- a/kubernetes/utility/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/echo-server/app/helmrelease.yaml
@@ -92,6 +92,8 @@ spec:
     ingress:
       app:
         className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external-utility.${SECRET_DOMAIN}
         hosts:
           - host: "{{ .Release.Name }}-utility.${SECRET_DOMAIN}"
             paths:
