--- a/kubernetes/main/apps/flux-system/addons/webhooks/github/ingress.yaml
+++ b/kubernetes/main/apps/flux-system/addons/webhooks/github/ingress.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: webhook-receiver
+  annotations:
+    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
 spec:
   ingressClassName: external
   rules:
