--- a/kubernetes/main/apps/media/ersatztv/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/ersatztv/app/helmrelease.yaml
@@ -81,6 +81,8 @@ spec:
     ingress:
       app:
         className: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
         hosts:
           - host: "tv.${SECRET_DOMAIN}"
             paths:
