--- a/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
@@ -131,5 +131,7 @@ spec:
     ingress:
       enabled: true
       ingressClassName: external
+      annotations:
+        external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
       host: kyoo-chart.${SECRET_DOMAIN}
       tls: true
