--- a/kubernetes/main/apps/media/wizarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/wizarr/app/helmrelease.yaml
@@ -69,6 +69,7 @@ spec:
           # gethomepage.dev/widget.type: wizarr
           # gethomepage.dev/widget.url: http://wizarr.media.svc.cluster.local:5690
           # gethomepage.dev/widget.key: ${WIZARR_TOKEN}
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
           - host: join.${SECRET_DOMAIN}
             paths:
