--- a/kubernetes/main/apps/media/your-spotify/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/your-spotify/app/helmrelease.yaml
@@ -105,6 +105,7 @@ spec:
       app:
         className: external
         annotations:
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
           nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
           nginx.ingress.kubernetes.io/proxy-body-size: 1000m
           nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
