--- a/kubernetes/main/apps/observability/kromgo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/kromgo/app/helmrelease.yaml
@@ -83,6 +83,8 @@ spec:
     ingress:
       app:
         className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
