--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -37,6 +37,8 @@ spec:
     ingress:
       dashboard:
         ingressClassName: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
         host:
           name: rook.${SECRET_DOMAIN}
           path: /
@@ -195,6 +197,7 @@ spec:
       #     enabled: true
       #     ingressClassName: internal
       #     annotations:
+      #       external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
       #       nginx.ingress.kubernetes.io/proxy-body-size: "0"
       #       nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
       #     host:
