--- a/kubernetes/main/apps/security/authentik/app/helmrelease.yaml
+++ b/kubernetes/main/apps/security/authentik/app/helmrelease.yaml
@@ -55,6 +55,7 @@ spec:
           gethomepage.dev/widget.type: authentik
           gethomepage.dev/widget.url: http://authentik-server.security
           gethomepage.dev/widget.key: "{{HOMEPAGE_VAR_AUTHENTIK_TOKEN}}"
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
           - sso.${SECRET_DOMAIN}
         https: false
