--- a/kubernetes/main/apps/self-hosted/changedetection/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/changedetection/app/helmrelease.yaml
@@ -75,6 +75,8 @@ spec:
     ingress:
       app:
         className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
           - host: change.${SECRET_DOMAIN}
             paths:
