--- a/kubernetes/main/apps/self-hosted/redlib/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/redlib/app/helmrelease.yaml
@@ -66,6 +66,7 @@ spec:
           gethomepage.dev/name: Redlib
           gethomepage.dev/icon: https://raw.githubusercontent.com/redlib-org/redlib/main/static/logo.svg
           gethomepage.dev/description: Reddit private front end
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
@@ -73,3 +74,4 @@ spec:
                 service:
                   identifier: app
                   port: http
+
