--- a/kubernetes/utility/apps/flux-system/capacitor/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/capacitor/app/helmrelease.yaml
@@ -59,6 +59,8 @@ spec:
       app:
         enabled: true
         className: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         hosts:
           - host: "{{ .Release.Name }}-utility.${SECRET_DOMAIN}"
             paths:
