--- a/kubernetes/utility/apps/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/weave-gitops/app/helmrelease.yaml
@@ -30,6 +30,8 @@ spec:
     ingress:
       enabled: true
       className: internal
+      annotations:
+        external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
       hosts:
         - host: gitops-utility.${SECRET_DOMAIN}
           paths:
