--- a/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -86,6 +86,8 @@ spec:
     ingress:
       app:
         className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external-utility.${SECRET_DOMAIN}
         hosts:
           - host: hass.${SECRET_DOMAIN}
             paths:
@@ -95,6 +97,8 @@ spec:
                   port: http
       codeserver:
         className: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         hosts:
           - host: hass-code.${SECRET_DOMAIN}
             paths:
