--- a/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
@@ -113,6 +113,8 @@ spec:
     ingress:
       app:
         className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external-utility.${SECRET_DOMAIN}
         hosts:
           - host: status-utility.${SECRET_DOMAIN}
             paths:
