--- a/kubernetes/utility/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -38,6 +38,8 @@ spec:
         enabled: true
         pathType: Prefix
         ingressClassName: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         hosts:
           - alertmanager-utility.${SECRET_DOMAIN}
       alertmanagerSpec:
@@ -100,6 +102,8 @@ spec:
       ingress:
         enabled: true
         ingressClassName: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         pathType: Prefix
         hosts:
           - prometheus-utility.${SECRET_DOMAIN}
