--- a/kubernetes/utility/apps/self-hosted/it-tools/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/it-tools/app/helmrelease.yaml
@@ -61,6 +61,8 @@ spec:
     ingress:
       app:
         className: external
+        annotations:
+          external-dns.alpha.kubernetes.io/target: external-utility.${SECRET_DOMAIN}
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
