--- a/kubernetes/utility/apps/self-hosted/meshcentral/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/app/helmrelease.yaml
@@ -68,6 +68,7 @@ spec:
         className: internal
         annotations:
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+          external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         hosts:
           - host: *host
             paths:
