--- a/kubernetes/utility/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/storage/longhorn/app/helmrelease.yaml
@@ -45,6 +45,8 @@ spec:
     ingress:
       enabled: true
       ingressClassName: internal
+      annotations:
+        external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
       host: longhorn.${SECRET_DOMAIN}
       tls: true
     metrics:
