feat: netkit in utility

--- a/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
@@ -4,6 +4,7 @@ bandwidthManager:
   enabled: false
   bbr: true
 bpf:
+  datapathMode: netkit
   hostLegacyRouting: true
   masquerade: true
   tproxy: true
@@ -32,6 +33,7 @@ kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
 l2announcements:
   enabled: true
 loadBalancer:
+  acceleration: best-effort
   algorithm: maglev
   mode: dsr
 localRedirectPolicy: true
