--- a/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
@@ -4,7 +4,7 @@ bandwidthManager:
   enabled: false
   bbr: true
 bpf:
-  datapathMode: netkit
+  # datapathMode: netkit
   hostLegacyRouting: true
   masquerade: true
   tproxy: true
@@ -13,9 +13,12 @@ cgroup:
     enabled: false
   hostRoot: /sys/fs/cgroup
 cluster:
-  name: main
+  name: utility
   id: 1
+cni:
+  exclusive: false
 devices: enp+
+enableIPv4BIGTCP: true
 enableRuntimeDeviceDetection: true
 endpointRoutes:
   enabled: true
@@ -33,7 +36,7 @@ kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
 l2announcements:
   enabled: true
 loadBalancer:
-  acceleration: best-effort
+  # acceleration: best-effort
   algorithm: maglev
   mode: dsr
 localRedirectPolicy: true
