--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -165,8 +165,11 @@ patches:
     machine:
       install:
         extraKernelArgs:
+          - apparmor=0
           - init_on_alloc=0
           - init_on_free=0
+          - mitigations=off
+          - security=none
 
 controlPlane:
   nodeLabels:
