--- a/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
@@ -15,10 +15,10 @@ cgroup:
 cluster:
   name: utility
   id: 1
-cni:
-  exclusive: false
+# cni:
+  # exclusive: false
 devices: enp+
-enableIPv4BIGTCP: true
+# enableIPv4BIGTCP: true
 enableRuntimeDeviceDetection: true
 endpointRoutes:
   enabled: true
