--- a/kubernetes/utility/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/storage/longhorn/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
       defaultDataLocality: true
       replicaAutoBalance: true
       storageMinimalAvailablePercentage: 1
-      storageReservedPercentageForDefaultDisk: 10
+      storageReservedPercentageForDefaultDisk: 1 # Dedicated disk
       defaultLonghornStaticStorageClass: longhorn
       nodeDownPodDeletionPolicy: delete-both-statefulset-and-deployment-pod
       concurrentAutomaticEngineUpgradePerNodeLimit: 3
