feat: update secret

--- a/kubernetes/utility/apps/network/cloudflared/app/dnsendpoint.yaml
+++ b/kubernetes/utility/apps/network/cloudflared/app/dnsendpoint.yaml
@@ -8,4 +8,4 @@ spec:
   endpoints:
     - dnsName: "external-utility.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
+      targets: ["${CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
