--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   - ./node-feature-discovery/ks.yaml
   # - ./powertune/ks.yaml
   - ./reloader/ks.yaml
-  # - ./system-upgrade-controller/ks.yaml
+  - ./system-upgrade-controller/ks.yaml
