--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   # Flux-Kustomizations
   - ./free-game-notifier/ks.yaml
   - ./it-tools/ks.yaml
-  # - ./meshcentral/ks.yaml
+  - ./meshcentral/ks.yaml
   - ./rss-forwarder/ks.yaml
   # - ./thelounge/ks.yaml
