again, ha ha ha

--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   - ./it-tools/ks.yaml
   - ./meshcentral/ks.yaml
   - ./rss-forwarder/ks.yaml
-  # - ./thelounge/ks.yaml
+  - ./thelounge/ks.yaml
