--- a/kubernetes/utility/apps/storage/longhorn/ks.yaml
+++ b/kubernetes/utility/apps/storage/longhorn/ks.yaml
@@ -20,25 +20,25 @@ spec:
   wait: false # no flux ks dependents
   interval: 30m
   timeout: 5m
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: &app storageclass
-  namespace: flux-system
-spec:
-  targetNamespace: storage
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
-  dependsOn:
-    - name: longhorn
-  path: ./kubernetes/utility/apps/storage/longhorn/storageclass
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  wait: false # no flux ks dependents
-  interval: 30m
-  timeout: 5m
+# ---
+# # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: &app storageclass
+#   namespace: flux-system
+# spec:
+#   targetNamespace: storage
+#   commonMetadata:
+#     labels:
+#       app.kubernetes.io/name: *app
+#   dependsOn:
+#     - name: longhorn
+#   path: ./kubernetes/utility/apps/storage/longhorn/storageclass
+#   prune: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: home-kubernetes
+#   wait: false # no flux ks dependents
+#   interval: 30m
+#   timeout: 5m
