--- a/kubernetes/utility/apps/storage/longhorn/storageclass/snapshot.yaml
+++ b/kubernetes/utility/apps/storage/longhorn/storageclass/snapshot.yaml
@@ -4,28 +4,11 @@ kind: StorageClass
 reclaimPolicy: Delete
 provisioner: driver.longhorn.io
 parameters:
-  # used for volsync to copy from.
-  # we set this to 1 replica for faster restores from the snapclass
-  dataLocality: disabled
+  dataLocality: enabled
   numberOfReplicas: "1"
   replicaAutoBalance: best-effort
   staleReplicaTimeout: "30"
 allowVolumeExpansion: true
-volumeBindingMode: WaitForFirstConsumer
-metadata:
-  name: longhorn-snapshot
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-reclaimPolicy: Delete
-provisioner: driver.longhorn.io
-parameters:
-  # we set this to 2 replica for less copies of the cache, which can be blown away safely.
-  dataLocality: disabled
-  numberOfReplicas: "1"
-  replicaAutoBalance: best-effort
-  staleReplicaTimeout: "30"
-allowVolumeExpansion: true
-volumeBindingMode: WaitForFirstConsumer
+volumeBindingMode: Immediate
 metadata:
   name: longhorn-cache
