--- a/kubernetes/utility/apps/self-hosted/thelounge/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/thelounge/ks.yaml
@@ -25,6 +25,6 @@ spec:
       APP: *app
       GATUS_SUBDOMAIN: tl
       PVC_VOLSYNC_STORAGECLASS: local-hostpath
-      VOLSYNC_SNAPSHOTCLASS: csi-local-hostpath
+      VOLSYNC_SNAPSHOTCLASS: csi-longhorn
       VOLSYNC_CACHE_SNAPSHOTCLASS: local-hostpath
       VOLSYNC_STORAGECLASS: local-hostpath
