--- a/kubernetes/utility/apps/self-hosted/thelounge/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/thelounge/ks.yaml
@@ -24,7 +24,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: tl
-      PVC_VOLSYNC_STORAGECLASS: local-hostpath
+      PVC_VOLSYNC_STORAGECLASS: longhorn
       VOLSYNC_SNAPSHOTCLASS: csi-longhorn
       VOLSYNC_CACHE_SNAPSHOTCLASS: local-hostpath
       VOLSYNC_STORAGECLASS: local-hostpath
