commit this shit

--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -7,6 +7,16 @@ vars:
 
 tasks:
 
+  quick-strap:
+    desc: Do a bunch of commands in a row because I'm really tired of this shit
+    cmds:
+      - task: apply-config
+      - task: talos
+      - task: apps
+      - task: rook
+    requires:
+      vars: [CLUSTER]
+
   gen-secrets:
     desc: Generate the Talos secrets
     cmds:
