--- a/kubernetes/utility/apps/storage/longhorn/storageclass/snapshot.yaml
+++ b/kubernetes/utility/apps/storage/longhorn/storageclass/snapshot.yaml
@@ -4,11 +4,11 @@ kind: StorageClass
 reclaimPolicy: Delete
 provisioner: driver.longhorn.io
 parameters:
-  dataLocality: enabled
+  dataLocality: disabled
   numberOfReplicas: "1"
   replicaAutoBalance: best-effort
   staleReplicaTimeout: "30"
 allowVolumeExpansion: true
-volumeBindingMode: Immediate
+volumeBindingMode: WaitForFirstConsumer
 metadata:
   name: longhorn-cache
