--- a/kubernetes/utility/apps/storage/snapshot-controller/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/storage/snapshot-controller/app/helmrelease.yaml
@@ -27,6 +27,8 @@ spec:
       retries: 3
   values:
     controller:
+      args:
+        enableDistributedSnapshotting: true
       volumeSnapshotClasses:
           - name: csi-longhorn
             annotations:
