--- a/kubernetes/utility/apps/storage/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/kustomization.yaml
@@ -6,7 +6,8 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./longhorn/ks.yaml
-  - ./openebs/ks.yaml
+  - ./local-path-provisioner/ks.yaml
+  # - ./longhorn/ks.yaml
+  # - ./openebs/ks.yaml
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
