--- a/kubernetes/utility/apps/storage/local-path-provisioner/app/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/local-path-provisioner/app/kustomization.yaml
@@ -1,9 +1,5 @@
----
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: flux-system
 resources:
-  - ./democratic-csi.yaml
-  - ./longhorn.yaml
-  - ./tofu-controller.yaml
+- ./helmrelease.yaml
