--- a/kubernetes/utility/apps/storage/snapshot-controller/ks.yaml
+++ b/kubernetes/utility/apps/storage/snapshot-controller/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: longhorn
+    - name: local-path-provisioner
   path: ./kubernetes/utility/apps/storage/snapshot-controller/app
   prune: true
   sourceRef:
