cleanup references to longhorn

--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
   dependsOn:
     - name: mosquitto
       namespace: home-automation
-    - name: longhorn
+    - name: local-path-provisioner
       namespace: storage
   values:
     controllers:
