--- a/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: longhorn
+    - name: local-path-provisioner
       namespace: storage
   values:
     controllers:
