--- a/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
@@ -257,7 +257,7 @@ spec:
           regex: (pod)
     ingress:
       enabled: true
-      ingressClassName: internal
+      ingressClassName: external
       hosts:
         - "{{ .Release.Name }}-utility.${SECRET_DOMAIN}"
     persistence:
